--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "executionInfo": {
           "elapsed": 3609091,
@@ -844,7 +844,163 @@
         "outputId": "2f4cda3e-61f1-4c3b-b8e6-6fb55704b160",
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10 - Loss: 5.9447\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 2/10 - Loss: 5.4350\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 3/10 - Loss: 5.2560\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 4/10 - Loss: 5.1449\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 5/10 - Loss: 5.0667\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 6/10 - Loss: 5.0073\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 7/10 - Loss: 4.9620\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 8/10 - Loss: 4.9234\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                  \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 9/10 - Loss: 4.8921\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                                   \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 10/10 - Loss: 4.8654\n",
+            "neural trigram validation perplexity: 246.11654969126792\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                     \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "saved neural_trigram_predictions.npy\n"
+          ]
+        }
+      ],
       "source": [
         "def ids(tokens):\n",
         "    return [vocab.stoi[t] for t in tokens]\n",
@@ -888,7 +1044,7 @@
         "        self.output_layer = nn.Linear(emb_dim, vocab_size)\n",
         "\n",
         "        self.linear1 = nn.Linear((n - 1) * emb_dim, hd_dim)\n",
-        "        self.linear2 = nn.Linear(hd_dim, emb_dim)\n",
+        "        self.linear2 = nn.Linear(hd_dim, hd_dim)\n",
         "        self.linear3 = nn.Linear(hd_dim, emb_dim)\n",
         "\n",
         "\n",
@@ -905,9 +1061,12 @@
         "        embs = embs.view(embs.size(0), -1) # batch * (n-1)*emb_dim\n",
         "        out = self.linear1(embs)\n",
         "        out = F.relu(out)\n",
+        "        out = self.dropout(out)\n",
+        "       \n",
         "        out = self.linear2(out) \n",
         "        out = F.relu(out)\n",
         "        out = self.dropout(out)\n",
+        "        \n",
         "        out = self.linear3(out)\n",
         "\n",
         "        logits = self.output_layer(out) #batch * vocab_size\n",
@@ -938,7 +1097,7 @@
         "        opt = torch.optim.Adam(self.network.parameters(), lr=0.001)\n",
         "\n",
         "        self.network.train()\n",
-        "        EPOCHS = 15\n",
+        "        EPOCHS = 10\n",
         "        for epoch in range(EPOCHS):\n",
         "            total_loss = 0\n",
         "            count = 0\n",
@@ -978,7 +1137,7 @@
         "        else:\n",
         "            prefix_ids = prefix_ids[-self.n+1:]\n",
         "\n",
-        "        x = torch.tensor(prefix_ids).cuda()\n",
+        "        x = torch.tensor([prefix_ids]).cuda()\n",
         "\n",
         "\n",
         "        with torch.no_grad():\n",
@@ -992,9 +1151,26 @@
         "        # don't forget self.network.eval()\n",
         "\n",
         "        # YOUR CODE HERE\n",
-        "\n",
-        "\n",
+        "        \n",
         "        self.network.eval()\n",
+        "        dataset = NeuralNgramDataset(ids(text), self.n)\n",
+        "        loader = torch.utils.data.DataLoader(dataset, batch_size=128, shuffle=False)\n",
+        "\n",
+        "        total_log_prob = 0\n",
+        "        total_tokens = 0\n",
+        "\n",
+        "        with torch.no_grad():\n",
+        "            for x, y in loader:\n",
+        "                x = x.cuda()\n",
+        "                y = y.cuda()\n",
+        "                log_probs = self.network(x)\n",
+        "                word_log_probs = log_probs.gather(1, y.unsqueeze(1)).squeeze(1)\n",
+        "                total_log_prob += word_log_probs.sum().item()\n",
+        "                total_tokens += y.size(0)\n",
+        "\n",
+        "        avg_log_prob = total_log_prob / total_tokens\n",
+        "        return math.exp(-avg_log_prob)\n",
+        "                \n",
         "\n",
         "neural_trigram_model = NeuralNGramModel(3)\n",
         "check_validity(neural_trigram_model)\n",
