actually finished part 1

--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 25,
       "metadata": {
         "executionInfo": {
           "elapsed": 3609091,
@@ -849,141 +849,141 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 1/10 - Loss: 5.9447\n"
+            "Epoch 1/10 - Loss: 5.9864\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 2/10 - Loss: 5.4350\n"
+            "Epoch 2/10 - Loss: 5.4337\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 3/10 - Loss: 5.2560\n"
+            "Epoch 3/10 - Loss: 5.2303\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 4/10 - Loss: 5.1449\n"
+            "Epoch 4/10 - Loss: 5.1032\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 5/10 - Loss: 5.0667\n"
+            "Epoch 5/10 - Loss: 5.0134\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 6/10 - Loss: 5.0073\n"
+            "Epoch 6/10 - Loss: 4.9444\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 7/10 - Loss: 4.9620\n"
+            "Epoch 7/10 - Loss: 4.8914\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 8/10 - Loss: 4.9234\n"
+            "Epoch 8/10 - Loss: 4.8471\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                  \r"
+            "                                                                \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 9/10 - Loss: 4.8921\n"
+            "Epoch 9/10 - Loss: 4.8124\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "                                                                   \r"
+            "                                                                 \r"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Epoch 10/10 - Loss: 4.8654\n",
-            "neural trigram validation perplexity: 246.11654969126792\n"
+            "Epoch 10/10 - Loss: 4.7826\n",
+            "neural trigram validation perplexity: 228.31407818387484\n"
           ]
         },
         {
@@ -1048,7 +1048,7 @@
         "        self.linear3 = nn.Linear(hd_dim, emb_dim)\n",
         "\n",
         "\n",
-        "        self.dropout = nn.Dropout(0.1)\n",
+        "        self.dropout = nn.Dropout(0.2)\n",
         "\n",
         "\n",
         "    def forward(self, x):\n",
@@ -1083,7 +1083,7 @@
         "\n",
         "    def train(self):\n",
         "        dataset = NeuralNgramDataset(ids(train_text), self.n)\n",
-        "        train_loader = torch.utils.data.DataLoader(dataset, batch_size=128, shuffle=True)\n",
+        "        train_loader = torch.utils.data.DataLoader(dataset, batch_size=256, shuffle=True)\n",
         "        # iterating over train_loader with a for loop will return a 2-tuple of batched tensors\n",
         "        # the first tensor will be previous token ids with size (batch, n-1),\n",
         "        # and the second will be the current token id with size (batch, )\n",
@@ -1094,7 +1094,7 @@
         "\n",
         "        # YOUR CODE HERE\n",
         "        \n",
-        "        opt = torch.optim.Adam(self.network.parameters(), lr=0.001)\n",
+        "        opt = torch.optim.Adam(self.network.parameters())\n",
         "\n",
         "        self.network.train()\n",
         "        EPOCHS = 10\n",
@@ -1154,7 +1154,7 @@
         "        \n",
         "        self.network.eval()\n",
         "        dataset = NeuralNgramDataset(ids(text), self.n)\n",
-        "        loader = torch.utils.data.DataLoader(dataset, batch_size=128, shuffle=False)\n",
+        "        loader = torch.utils.data.DataLoader(dataset, batch_size=256, shuffle=False)\n",
         "\n",
         "        total_log_prob = 0\n",
         "        total_tokens = 0\n",
@@ -1182,9 +1182,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "                                                     \r"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "saved neural_trigram_predictions.npy\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "save_truncated_distribution(neural_trigram_model, 'neural_trigram_predictions.npy', short=False)"
@@ -1201,7 +1216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "x1yH0lGOB1-S",
         "trusted": true
